--- a/app/src/main/res/layout/adaptermassegreceptor.xml
+++ b/app/src/main/res/layout/adaptermassegreceptor.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_gravity="center_horizontal|center_vertical"
+        android:layout_gravity="center_horizontal"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:orientation="vertical">
