--- a/app/src/main/res/menu/mymenumesseg.xml
+++ b/app/src/main/res/menu/mymenumesseg.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/csecion" android:title="Cerrar Seccion" />
-    <item android:id="@+id/salir" android:title="Salir" />
+    <!--<item android:id="@+id/csecion" android:title="Cerrar Seccion" />-->
+    <!--<item android:id="@+id/salir" android:title="Salir" />-->
 </menu>
